Created routes for client and documented in swagger.json
